CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(openDMD)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -DDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
ADD_DEFINITIONS(-DLINUX)
ELSEIF(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
#SET(CMAKE_CXX_FLAGS "-fobjc-arc")
ADD_DEFINITIONS(-DMACOSX)
ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")

ADD_SUBDIRECTORY(src)

