dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(openDMD, 0.0.1, weizhenwei1988@gmail.com)
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_PROG_CC
AC_PROG_CXX

LT_INIT
ACLOCAL_AMFLAGS="-I m4"

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

