MESSAGE(STATUS "CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
MESSAGE(STATUS "CMAKE_SYSTEM_PROCESSOR is ${CMAKE_SYSTEM_PROCESSOR}")

# detect platform;
IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
        SET(LINUX_PLATFORM TRUE)
    ENDIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
ELSEIF(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
    IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
        SET(MAC_PLATFORM TRUE)
    ENDIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")

IF(NOT LINUX_PLATFORM AND NOT MAC_PLATFORM)
    MESSAGE(FATAL_ERROR "Only Linux-x86_64 and Darwin-x86_64 platform supported")
ENDIF(NOT LINUX_PLATFORM AND NOT MAC_PLATFORM)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/utils)
IF(LINUX_PLATFORM)
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/linux)
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/vendor/glog/linux-x86_64/include)
    LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/vendor/glog/linux-x86_64/lib)
ELSEIF(MAC_PLATFORM)    
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/mac)
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/vendor/glog/mac-x86_64/include)
    LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/vendor/glog/mac-x86_64/lib)
    AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/mac PLATFORM_SPECIFIC_SRC)
ENDIF(LINUX_PLATFORM)

FILE(GLOB UNIVERSAL_FILES *.h *.cpp)
FILE(GLOB INCLUDE_FILES include/*.h)
FILE(GLOB UTILS_FILES utils/*.h utils/*.cpp)
IF(LINUX_PLATFORM)
    FILE(GLOB PLATFORM_SPECIFIC_FILES linux/*.h linux/*.cpp)
    SET(PLATFORM_LIB "")
ELSEIF(MAC_PLATFORM)    
    FILE(GLOB PLATFORM_SPECIFIC_FILES mac/*.h mac/*.cpp mac/*.m mac/*.mm)
    FIND_LIBRARY(COCOA_LIB Cocoa)
    FIND_LIBRARY(FOUNDATION_LIB Foundation)
    SET(PLATFORM_LIB ${COCOA_LIB} ${FOUNDATION_LIB})
ENDIF(LINUX_PLATFORM)

SET(ALL_FILES ${UNIVERSAL_FILES} ${INCLUDE_FILES} ${UTILS_FILES}
        ${PLATFORM_SPECIFIC_FILES})

# group source files in IDE project
SOURCE_GROUP("opendmd" FILES ${ALL_FILES})
SOURCE_GROUP("opendmd/include" FILES ${INCLUDE_FILES})
SOURCE_GROUP("opendmd/utils" FILES ${UTILS_FILES})
IF(LINUX_PLATFORM)
    SOURCE_GROUP("opendmd/linux" FILES ${PLATFORM_SPECIFIC_FILES})
ELSEIF(MAC_PLATFORM)    
    SOURCE_GROUP("opendmd/mac" FILES ${PLATFORM_SPECIFIC_FILES})
ENDIF(LINUX_PLATFORM)

ADD_EXECUTABLE(openDMD ${ALL_FILES})
TARGET_LINK_LIBRARIES(openDMD glog ${PLATFORM_LIB})

# ADD_SUBDIRECTORY(include)

